--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --mode=development",
     "build": "webpack --mode=production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "cardcj",
   "license": "MIT",
@@ -25,9 +25,12 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.1",
     "style-loader": "^2.0.0",
     "typescript": "^4.1.3",
     "webpack": "^5.11.0",
