--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@testing-library/react": "^11.2.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
