reconfigured webpack to use App.tsx as an entry point, changed main in package.json to be App.tsx, changed import for ReactDOM for App.tsx

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mydash",
   "version": "0.0.1",
   "description": "Personal dashboard",
-  "main": "index.js",
+  "main": "App.tsx",
   "scripts": {
     "start": "webpack serve --mode=development",
     "build": "webpack --mode=production",
