--- a/package.json
+++ b/package.json
@@ -24,11 +24,17 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@react-mock/state": "^0.1.8",
+    "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.2",
+    "@types/react-test-renderer": "^17.0.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "eslint-plugin-jest-dom": "^3.6.5",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "react-test-renderer": "^17.0.1",
