--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
         "preserveConstEnums": true,
         "removeComments": true,
         "target": "es5",
+        "types": ["jest", "node"],
         "allowSyntheticDefaultImports": true
-    }
+    },
+    "include": [
+        "./jest-setup.ts",
+        "src/**/*"
+    ]
 }
